<resources>
    <string name="app_name">CFinanceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="complete">Complete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="app_logo">appLogo</string>
    <string name="watchlist">Watchlist</string>
    <string name="today_s_hot">Today\'s Hot</string>
    <string name="market">Market</string>
    <string name="profilepicture">profilePicture</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="balance">Balance</string>
    <string name="logout">Logout</string>
    <string name="editprofilefab">editProfileFAB</string>
    <string name="logouticon">logoutIcon</string>
    <string name="account_id">Account ID</string>
    <string name="coin_name">Coin name</string>
    <string name="current_price">Current Price</string>
    <string name="price_change_24h">Price Change 24h</string>
    <string name="change">Change %</string>
    <string name="coin_symbol">Coin Symbol</string>
    <string name="coin_logo">Coin Logo</string>
    <string name="current_balance">Current Balance</string>
    <string name="profit">Profit</string>
    <string name="assets">Assets</string>
    <string name="deposit">Deposit</string>
    <string name="send">Send</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="back">Back</string>
    <string name="button_back">Button Back</string>
    <string name="weekly">Weekly</string>
    <string name="_24h">24H</string>
    <string name="_1h">1H</string>
    <string name="MarketCap">MarketCap</string>
    <string name="_1h_change">1H Change</string>
    <string name="_24h_change">24H Change</string>
    <string name="_7d_change">7D Change</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="total_supply">Total Supply</string>
    <string name="max_supply">Max Supply</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="volume24h">Volume24h</string>
    <string name="_1ht">1H:</string>
    <string name="_24ht">24H:</string>
    <string name="_7dt">7D:</string>
    <string name="supply">Supply</string>

    <string-array name="optionsMarket">
        <item>All</item>
        <item>Gain</item>
        <item>Lose</item>
    </string-array>

    <string-array name="optionsTransactions">
        <item>All</item>
        <item>Bought</item>
        <item>Sold</item>
        <item>Deposits</item>
    </string-array>

    <string name="here"><u>here</u></string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="new_wallet">Create Wallet</string>
    <string name="amountBuy">Amount To Buy</string>
    <string name="amountSell">Amount To Sell</string>
    <string name="not_registered_yet_create_account">Not Registered yet? Create account</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="total_assets">Total Assets</string>
    <string name="_0_00">0.00$</string>
    <string name="yyyy_mm_dd_00_00_00">YYYY-MM-DD 00:00:00</string>
    <string name="status">Status</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="quantity">Quantity</string>
    <string name="_200_usdt">200 USDT</string>
    <string name="transactions_account">Transactions Account</string>
    <string name="time">Time</string>
    <string name="transaction_hash">Transaction Hash</string>
    <string name="amount">Amount</string>
    <string name="transaction_price">Transaction Price</string>
    <string name="_0_00_percent">0.00%</string>
    <string name="max">Max</string>
</resources>