<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey_background"
    tools:context=".ui.DetailsFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivCoinLogoDetails"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/finance_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circular"
        app:strokeColor="@color/turquoise_dark"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/tvCoinNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/coin_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/ivCoinLogoDetails"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoinSymbolDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin_symbol"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toEndOf="@+id/ivCoinLogoDetails"
        app:layout_constraintTop_toBottomOf="@+id/tvCoinNameDetails" />

    <WebView
        android:id="@+id/wvChartDetails"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="368dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuyDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogoDetails"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBuyDetails"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/green"
        android:text="@string/buy"
        app:flow_verticalAlign="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/sell"
        app:flow_verticalAlign="bottom"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuyDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuyDetails"
        app:layout_constraintTop_toTopOf="@+id/btnBuyDetails" />

    <ImageButton
        android:id="@+id/btnBackDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_grey_background"
        android:contentDescription="@string/button_back"
        android:src="@drawable/arrow_back_icon"
        app:layout_constraintEnd_toStartOf="@+id/ivCoinLogoDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners_general_style"
        android:text="@string/_1h"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogoDetails" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:background="@drawable/rounded_corners_general_style"
        android:text="@string/_24h"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn1h"
        app:layout_constraintStart_toEndOf="@+id/btn1h"
        app:layout_constraintTop_toTopOf="@+id/btn1h"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:text="@string/weekly"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners_general_style"
        app:layout_constraintBottom_toBottomOf="@+id/btn24h"
        app:layout_constraintStart_toEndOf="@+id/btn24h"
        app:layout_constraintTop_toTopOf="@+id/btn24h" />

    <TextView
        android:id="@+id/tvCurrentPriceDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/current_price"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wvChartDetails" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="@color/dark_grey_background"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuyDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentPriceDetails"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDetailsCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners_general_style">

            <TextView
                android:id="@+id/tvMarketCapDetailsCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="18dp"
                android:text="@string/MarketCap"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv1hChangeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:text="@string/_1h_change"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMarketCapDetailsCard" />

            <TextView
                android:id="@+id/tv24hChangeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/_24h_change"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1hChangeDetail" />

            <TextView
                android:id="@+id/tv7dChangeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/_7d_change"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv24hChangeDetail" />

            <TextView
                android:id="@+id/tvCirculatingSupplyDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                android:text="@string/circulating_supply"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTotalSupplyDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:text="@string/total_supply"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCirculatingSupplyDetails" />

            <TextView
                android:id="@+id/tvMaxSupplyDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:text="@string/max_supply"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalSupplyDetail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvChangePercentageDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/change"
        app:layout_constraintStart_toEndOf="@+id/tvCurrentPriceDetails"
        app:layout_constraintTop_toBottomOf="@+id/wvChartDetails" />


</androidx.constraintlayout.widget.ConstraintLayout>




