<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey_background"
    tools:context=".ui.ProfileFragment">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCardView"
        app:layout_constraintVertical_bias="0.508" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCardView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_gradient">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/profilepicture"
                android:src="@drawable/baseline_account_circle_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.382"
                app:shapeAppearanceOverlay="@style/Circular"
                app:strokeColor="@color/turquoise"
                app:strokeWidth="3dp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="132dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture" />

            <TextView
                android:id="@+id/tvSurnameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/surname"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvBalanceProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvSurnameProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.749"
                app:layout_constraintStart_toEndOf="@+id/tvSurnameProfile"
                app:layout_constraintTop_toTopOf="@+id/tvSurnameProfile"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/turquoise"
        android:clickable="true"
        android:contentDescription="@string/editprofilefab"
        android:focusable="true"
        android:outlineAmbientShadowColor="@color/turquoise"
        android:outlineProvider="background"
        android:src="@drawable/edit_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="@+id/profileCardView"
        app:layout_constraintTop_toBottomOf="@+id/profileCardView"
        app:shapeAppearanceOverlay="@style/Circular" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logout_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:contentDescription="@string/logouticon" />

</androidx.constraintlayout.widget.ConstraintLayout>